examples/test/testpolicy11842.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11842
  namespace: namespace345
spec:
  podSelector:
    matchLabels:
      key4: value42
      key42: value45
      key5: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value11
          key40: value11
          key46: value12
